--- a/css-demo/css/app.scss
+++ b/css-demo/css/app.scss
@@ -5,3 +5,13 @@ body {
 .navbar {
     background-image: linear-gradient(to bottom, #007C0C 0, #000C0C 100%);
 }
+
+h1 {
+    padding: 15px;
+
+    border: {
+        color: red;
+        style: solid;
+        width: 1px;
+    }
+}
