--- a/css-demo/css/app2.less
+++ b/css-demo/css/app2.less
@@ -2,4 +2,11 @@
 h1 {
     border : 3px solid @blue;
     padding: 15px;
+
+    //props that will have to be prefixed
+    background: linear-gradient(to top, black, white);
+    display: flex;
+    transition: transform 1s;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
 }
