--- a/css-demo/css/app2.less
+++ b/css-demo/css/app2.less
@@ -10,3 +10,14 @@ h1 {
     -webkit-border-radius: 5px;
     border-radius: 5px;
 }
+
+.bg_header_img {
+    background: url('../images/peacock.jpg') -131px 1px no-repeat;
+    margin-right: 15px;
+    height: 150px;
+    width: 150px;
+}
+
+h3 {
+    font-size: 18px;
+}
