using custom font

--- a/css-demo/css/app2.less
+++ b/css-demo/css/app2.less
@@ -21,3 +21,13 @@ h1 {
 h3 {
     font-size: 18px;
 }
+
+@font-face {
+    font-family: 'Barrio';
+    src: url('../fonts/Barrio-Regular.ttf');
+}
+
+body {
+    font-family: 'Barrio';
+    padding-top: 80px;
+}
